# zapps

./: .gitignore  README.md
cfg/: dev1.conf  dev2.conf
toolbox_app/: CMakeLists.txt  prj.conf
toolbox_app/src/: certificate.h  main.c
